// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getIndemnite 2k, 2ans d'ancienneté, groupe IV should return 1200 1`] = `
Object {
  "formula": "(3 / 10) * Sref * \\"ancienneté\\"",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "ancienneté (en année entière)": 2,
    "ancienneté totale": 2,
    "groupe": "IV",
  },
}
`;

exports[`getIndemnite 2k, 2ans d'ancienneté, groupe V should return 1600 1`] = `
Object {
  "formula": "(4 / 10) * Sref  * \\"ancienneté\\"",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "ancienneté (en année entière)": 2,
    "ancienneté totale": 2,
    "groupe": "V",
  },
}
`;

exports[`getIndemnite 2k, 5ans d'ancienneté, 51ans should return 5000 1`] = `
Object {
  "formula": "(3 / 10) * Sref * \\"ancienneté\\"  + Sref",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "age": 51,
    "ancienneté (en année entière)": 5,
    "ancienneté totale": 5,
    "groupe": "I",
  },
}
`;

exports[`getIndemnite 2k, 5ans d'ancienneté, 51ans, licenciement eco, OPE should return 7000 1`] = `
Object {
  "formula": "(3 / 10) * Sref * \\"ancienneté\\"  + Sref * 2",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "age": 51,
    "ancienneté (en année entière)": 5,
    "ancienneté totale": 5,
    "groupe": "I",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 5ans d'ancienneté, 55ans should return 7000 1`] = `
Object {
  "formula": "(3 / 10) * Sref * \\"ancienneté\\"  + Sref * 2",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "age": 55,
    "ancienneté (en année entière)": 5,
    "ancienneté totale": 5,
    "groupe": "I",
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, 51ans, groupe IV should return 10000 1`] = `
Object {
  "formula": "(4 / 10) * Sref * \\"ancienneté\\"+ Sref",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "age": 51,
    "ancienneté (en année entière)": 10,
    "ancienneté totale": 10,
    "groupe": "IV",
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, 51ans, groupe V should return 14000 1`] = `
Object {
  "formula": "(6 / 10) * Sref  * \\"ancienneté\\" + Sref",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "age": 51,
    "ancienneté (en année entière)": 10,
    "ancienneté totale": 10,
    "groupe": "V",
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, groupe IV should return 8000 1`] = `
Object {
  "formula": "(4 / 10) * Sref * \\"ancienneté\\"",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "ancienneté (en année entière)": 10,
    "ancienneté totale": 10,
    "groupe": "IV",
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, groupe V should return 12000 1`] = `
Object {
  "formula": "(6 / 10) * Sref  * \\"ancienneté\\"",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "ancienneté (en année entière)": 10,
    "ancienneté totale": 10,
    "groupe": "V",
  },
}
`;

exports[`getIndemnite 2k, 10ans, 51ans, groupe IV, licenciement eco, OPE should return 12000 1`] = `
Object {
  "formula": "(4 / 10) * Sref * \\"ancienneté\\"+ Sref* 2",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "age": 51,
    "ancienneté (en année entière)": 10,
    "ancienneté totale": 10,
    "groupe": "IV",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 10ans, 51ans, groupe V, licenciement eco, OPE should return 16000 1`] = `
Object {
  "formula": "(6 / 10) * Sref  * \\"ancienneté\\" + Sref* 2",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "age": 51,
    "ancienneté (en année entière)": 10,
    "ancienneté totale": 10,
    "groupe": "V",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté should return 500 1`] = `
Object {
  "formula": "-",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "ancienneté (en année entière)": 1,
    "ancienneté totale": 1,
    "groupe": "I",
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, OPE + licenciement eco should return 2000 1`] = `
Object {
  "formula": "Sref",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "ancienneté (en année entière)": 1,
    "ancienneté totale": 1,
    "groupe": "I",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, groupe IV should return 500 1`] = `
Object {
  "formula": "-",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "ancienneté (en année entière)": 1,
    "ancienneté totale": 1,
    "groupe": "IV",
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, groupe IV, OPE + licenciement eco should return 2000 1`] = `
Object {
  "formula": "Sref",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "ancienneté (en année entière)": 1,
    "ancienneté totale": 1,
    "groupe": "IV",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, groupe V should return 500 1`] = `
Object {
  "formula": "-",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "ancienneté (en année entière)": 1,
    "ancienneté totale": 1,
    "groupe": "V",
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, groupe V, OPE + licenciement eco should return 2000 1`] = `
Object {
  "formula": "Sref",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "ancienneté (en année entière)": 1,
    "ancienneté totale": 1,
    "groupe": "V",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, 51ans, groupe IV should return 22000 1`] = `
Object {
  "formula": "(5 / 10) *  Sref * \\"ancienneté\\"+ Sref",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "age": 51,
    "ancienneté (en année entière)": 20,
    "ancienneté totale": 20,
    "groupe": "IV",
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, 51ans, groupe IV, licenciement eco, OPE should return 24000 1`] = `
Object {
  "formula": "(5 / 10) *  Sref * \\"ancienneté\\"+ Sref* 2",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "age": 51,
    "ancienneté (en année entière)": 20,
    "ancienneté totale": 20,
    "groupe": "IV",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, 51ans, groupe V should return 34000 1`] = `
Object {
  "formula": "(8 / 10) * Sref  * \\"ancienneté\\" + Sref",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "age": 51,
    "ancienneté (en année entière)": 20,
    "ancienneté totale": 20,
    "groupe": "V",
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, 51ans, groupe V, licenciement eco, OPE should return 36000 1`] = `
Object {
  "formula": "(8 / 10) * Sref  * \\"ancienneté\\" + Sref* 2",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "age": 51,
    "ancienneté (en année entière)": 20,
    "ancienneté totale": 20,
    "groupe": "V",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, groupe IV should return 20000 1`] = `
Object {
  "formula": "(5 / 10) *  Sref * \\"ancienneté\\"",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "ancienneté (en année entière)": 20,
    "ancienneté totale": 20,
    "groupe": "IV",
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, groupe V should return 32000 1`] = `
Object {
  "formula": "(8 / 10) * Sref  * \\"ancienneté\\"",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "ancienneté (en année entière)": 20,
    "ancienneté totale": 20,
    "groupe": "V",
  },
}
`;

exports[`getIndemnite 2k, 23ans d'ancienneté, 55ans, groupe V, licenciement eco, OPE should return 40000 1`] = `
Object {
  "formula": "Sref * 20",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "age": 55,
    "ancienneté (en année entière)": 23,
    "ancienneté totale": 23,
    "groupe": "V",
  },
}
`;

exports[`getIndemnite 2k, 30mois d'ancienneté should return 1500 1`] = `
Object {
  "formula": "(3 / 10) * Sref * \\"ancienneté\\" ",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "ancienneté (en année entière)": 2,
    "ancienneté totale": 2.5,
    "groupe": "I",
  },
}
`;

exports[`getIndemnite 2k, 33ans d'ancienneté, 55ans, groupe IV, licenciement eco, OPE should return 36000 1`] = `
Object {
  "formula": "Sref * 18",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "age": 55,
    "ancienneté (en année entière)": 33,
    "ancienneté totale": 33,
    "groupe": "IV",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 41ans d'ancienneté, 55ans should return 28000 1`] = `
Object {
  "formula": "Sref * 14",
  "labels": Object {
    "Salaire de référence (Sref)": 2000,
    "age": 55,
    "ancienneté (en année entière)": 41,
    "ancienneté totale": 41,
    "groupe": "I",
  },
}
`;
